test/parser/bad/method_and_field_access/array_method_call.java
protected class A {
  public void m() {
    int[] x = new int[42];
    x.clone();
  }
}

